# openxd

./: .env.example  .gitignore  Cargo.toml  README.md  package-lock.json  package.json
app/: Cargo.toml
app/src/: action.rs  asset.rs  cache.rs  client.rs  external.rs  helpers.rs  lib.rs  messages.rs  model.rs  oxd.rs  storage.rs
docs/architecture/: database-relations.md  oxd-file-compression.md  ws-auth.md
docs/infrastructure/: cache-db.md  rendering.md  ui-framework.md
docs/operations/: backgrounds.md  coordinate-system.md  open-local-file.md
frontend/: Cargo.toml  index.html  index.js  webpack.config.js
frontend/src/: lib.rs
rpc/: Cargo.toml
rpc/src/: lib.rs
server/: Cargo.toml
server/src/: config.rs  error.rs  lib.rs  main.rs  model.rs  ws.rs
server/src/storage/: fs.rs  mod.rs  s3.rs
standalone/: Cargo.toml
standalone/src/: app.rs  bichannel.rs  fs.rs  main.rs  mock_api.rs  standalone_app.rs  user_cache.rs
transport/: Cargo.toml
transport/src/: app.rs  incoming.rs  lib.rs  outgoing.rs  ui.rs  vo.rs
ui/: Cargo.toml  webpack.config.js
ui/fonts/: icons.html
ui/src/: app.rs  cache.rs  canvas.rs  client.rs  external.rs  lib.rs  main.rs  remote_cache.rs  scopes.rs  state.rs  tab.rs  ui.rs
ui/src/commands/: mod.rs  nope.rs
ui/src/commands/file/: create_project.rs  mod.rs  open_file.rs  save_snapshot.rs
ui/src/commands/tab/: close_tab.rs  mod.rs
ui/src/components/: canvas.rs  dialog.rs  dialog_container.rs  menu.rs  mod.rs  quick_icons.rs  status_bar.rs  tabs.rs  workbook_canvas.rs
ui/src/components/menu/: file_menu.rs  mod.rs
ui/src/components/windows/: create_project_window.rs  mod.rs
ui/src/graphics/: instance_buffer.rs  mod.rs  workbook.rs
ui/src/graphics/workbook/: coordinates.rs  line.rs  mod.rs  rectangle.rs  screen.rs  straight_line.wgsl  workbook.rs
ui/src/graphics/workbook/shaders/: backgrounds.wgsl  line.wgsl  rectangle.wgsl
ui/src/transport/: mod.rs
web/: Cargo.toml  editor.html  index.html  index.js  webpack.config.js
web/src/: app.rs  cache.rs  config.rs  file_uploader.rs  lib.rs  rest_api.rs  ws.rs
