[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
transport = { path = "../transport" }
futures = "^0.3"
surrealdb= { version = "1.0.0-beta.9+20230402", default-features = false }
tokio = {version = "^1.28", default-features = false, features = ["time"]}
async-trait = "^0.1"
async-compression = {version = "^0.3", features = ["tokio"], optional = true}
tokio-tar = "^0.3"
serde-xml-rs = "^0.6"
serde = {version = "^1.0", features = ["derive"]}
uuid = {version = "^1.3", default-features = false, features = ["v4"]}
err-derive = "^0.3"
regex = "^1.8"
thiserror = "^1.0"
log = "^0.4"

[features]
default = ["compression-xz"]
compression-xz = ["async-compression/xz"]
compression-zstd = ["async-compression/zstd"]
compression-zlib = ["async-compression/zlib"]
compression-lzma = ["async-compression/lzma"]
compression-gzip = ["async-compression/gzip"]
compression-deflate = ["async-compression/deflate"]
compression-brotli = ["async-compression/brotli"]
compression-bzip2 = ["async-compression/bzip2"]

