[package]
name = "rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tarpc = {git = "https://github.com/whizsid/tarpc.git", branch="wasm-support", optional = true, default-features = false}
async-trait = "0.1.60"

[features]
client = ["tarpc/client"]
server = ["tarpc/server"]
