[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "^1.27", features = ["rt", "macros", "rt-multi-thread", "net", "io-util"]}
dotenv_codegen = "^0.15"
tokio-tungstenite = "^0.18"
app = {path = "../app"}
transport = {path = "../transport"}
futures = "^0.3"
tungstenite = "^0.18"
pin-project = "^1.0"
bincode = "^1.3"
