[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "^1.27", features = ["rt", "macros", "rt-multi-thread", "net", "io-util"]}
dotenv_codegen = "^0.15"
app = {path = "../app"}
transport = {path = "../transport"}
futures = "^0.3"
pin-project = "^1.0"
bincode = "^1.3"
routerify = "^3.0"
routerify-websocket = "^3.0"
routerify-cors = "^3.0"
hyper = "^0.14"
once_cell = "^1.17"
querystring = "^1.1"
multer = {version = "^2.1", features = ["tokio-io"]}
tokio-util = {version = "^0.7", default-features = false, features = ["io"]}
