[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "^1.27", features = ["rt", "macros", "rt-multi-thread", "net", "io-util", "fs", "sync", "parking_lot"]}
dotenv_codegen = "^0.15"
app = {path = "../app"}
transport = {path = "../transport"}
futures = "^0.3"
pin-project = "^1.0"
bincode = "^1.3"
routerify = "^3.0"
routerify-websocket = "^3.0"
routerify-cors = "^3.0"
hyper = {version = "^0.14", features = ["stream"]}
querystring = "^1.1"
multer = {version = "^2.1", features = ["tokio-io"]}
tokio-util = {version = "^0.7", default-features = false, features = ["io"]}
async-trait = "^0.1"
uuid = {version = "^1.3", features = ["v4"]}
surrealdb = {version="1.0.0-beta.9+20230402", default-features = false, optional = true}
serde = {version="^1.0", features = ["derive"]}
serde_json = "^1.0"
once_cell = "^1.17"

[features]
default = ["storage-fs", "db-ws", "db-auth-root"]
# Amazon S3 as the storage
storage-s3 = []
# File system as the storage
storage-fs = []
# Database connection over websocket
db-ws = ["surrealdb/protocol-ws"]
# Database connection over websocket with TLS
db-wss = ["surrealdb/protocol-ws", "surrealdb/rustls"]
# Database connection over http
db-http = ["surrealdb/protocol-http"]
# Database connection over http with TLS
db-https = ["surrealdb/protocol-http", "surrealdb/rustls"]
# Authenticate to DB as a root user
db-auth-root = []
# Authenticate to DB as a DB user
db-auth-database = []
# Authenticate to DB as a namespace user
db-auth-namespace = []
