[package]
name = "standalone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ui = {path = "../ui"}
eframe = "^0.21"
tokio = {version = "^1.27", features = ["rt", "macros", "rt-multi-thread"]}
futures = "^0.3"
pin-project = "^1.0"
transport = {path = "../transport"}
app = {path = "../app"}
simple_logger = "4.1.0"
