[package]
name = "standalone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ui = {path = "../ui"}
eframe = "^0.21"
tokio = {version = "^1.27", features = ["rt", "macros", "rt-multi-thread", "time", "fs"]}
futures = "^0.3"
pin-project = "^1.0"
transport = {path = "../transport"}
app = {path = "../app"}
simple_logger = "4.1.0"
dirs = "^5.0"
surrealdb = {version="1.0.0-beta.9+20230402", default-features = false, optional = true}
async-trait = "^0.1"
uuid = {version = "^1.3", features = ["v4"]}

[features]
default = ["db-tikv"]
db-tikv = ["surrealdb/kv-tikv"]
db-rocksdb = ["surrealdb/kv-rocksdb"]
db-mem = ["surrealdb/kv-mem"]
