[package]
name = "ui"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfd = "0.10.0"
egui = {version = "^0.21", default-features = false}
futures = "^0.3"
transport = {path = "../transport"}
log = "^0.4"
async-trait = "^0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
poll-promise = {version = "0.2.0", default-features = false, features = ["web"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
poll-promise = {version = "0.2.0", default-features = false, features = ["tokio"]}

[features]
# Opening remote projects
open_remote = []
# Opening local files
open_local = []
