[package]
name = "ui"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfd = "^0.11"
egui = {version = "^0.22", default-features = false}
egui_extras = {version = "^0.22", features = ["svg"]}
egui_grid = "^0.2"
egui_dock = "^0.6"
futures = "^0.3"
transport = {path = "../transport"}
log = "^0.4"
async-trait = "^0.1"
egui-wgpu = "^0.22"
regex = "^1.8"
wgpu = "^0.16"
bytemuck = {version = "^1.13", features=["derive"]}
lyon_tessellation = "^1.0"
euclid = "^0.22"
cgmath = "^0.18"
palette = "^0.7"
colorgrad = "^0.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
poll-promise = {version = "0.2.0", default-features = false, features = ["web"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
poll-promise = {version = "0.2.0", default-features = false, features = ["tokio"]}

[features]
# Opening remote projects
open_remote = []
# Opening local files
open_local = []
