cargo-features = ["per-package-target"]

[package]
name = "web"
version = "0.1.0"
edition = "2021"
forced-target = "wasm32-unknown-unknown"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2"
wasm-bindgen-futures = "^0.4"
js-sys = "^0.3"
web-sys = {version = "^0.3", features = [
    "FormData",
    "Blob",
    "Window",
    "Document",
    "UrlSearchParams",
    "Location",
    "Storage",
    "Request",
    "RequestInit",
    "Response",
    "Headers",

    "ReadableStream",
    "ReadableStreamByobReader",
    "ReadableStreamGetReaderOptions",
    "ReadableStreamReaderMode",

    "WritableStream",
    ]}
tracing-wasm = "^0.2"
console_error_panic_hook = "^0.1"
eframe = "^0.22"
ui = { path = "../ui" }
ws_stream_wasm = "^0.7"
futures = "^0.3"
pin-project = "^1.0"
dotenv_codegen = "^0.15"
console_log = "^1.0"
log = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
async-trait = "^0.1"
futures-io = "^0.3"
